--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "photo-port",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://soundproofboot.github.io/photo-port",
   "dependencies": {
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
@@ -13,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
